--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "landing-hubaku",
-  "private": true,
+
+  "homepage": ".",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
